# CV_surround-vision-on-robot

./: .gitignore  CMakeLists.txt  README.md
ope_cam_by_class/: CMakeLists.txt
ope_cam_by_class/include/: add_label.hpp  using_a_cam.hpp
ope_cam_by_class/src/: ope_cam_by_class.cpp  using_a_cam.cpp
src/cam_splice_and_pub/: CMakeLists.txt
src/cam_splice_and_pub/include/: SocketMatTransmissionClient.h  SocketMatTransmissionServer.h  using_a_cam.hpp
src/cam_splice_and_pub/src/: SocketClientMat.cpp  SocketMatTransmissionClient.cpp  SocketMatTransmissionServer.cpp  SocketServerMat.cpp  ope_cam_by_class_client.cpp  using_a_cam.cpp
src/code_from_csdn/: CMakeLists.txt
src/code_from_csdn/include/: SocketMatTransmissionClient.h  SocketMatTransmissionServer.h
src/code_from_csdn/src/: SocketMatTransmissionClient.cpp  SocketMatTransmissionServer.cpp  SocketServerMat.cpp
src/rec_as_client/: CMakeLists.txt
src/rec_as_client/include/: SocketMatTransmissionClient.h
src/rec_as_client/src/: SocketClientMat.cpp  SocketMatTransmissionClient.cpp
src/splice_and_pub_ros/: CMakeLists.txt  package.xml
src/splice_and_pub_ros/include/splice_and_pub/: SocketMatTransmissionClient.h
src/splice_and_pub_ros/launch/: start_client_and_cams.launch
src/splice_and_pub_ros/src/: SocketMatTransmissionClient.cpp  ope_cam_by_class_client.cpp  read_and_pub.cpp
src_ros/: README.md
src_ros/sap_as_client/: CMakeLists.txt  package.xml
src_ros/sap_as_client/include/splice_and_pub/: SocketMatTransmissionClient.h
src_ros/sap_as_client/launch/: start_client_and_cams.launch
src_ros/sap_as_client/src/: SocketMatTransmissionClient.cpp
src_ros/sap_as_server/: CMakeLists.txt  package.xml
src_ros/sap_as_server/include/splice_and_pub/: SocketMatTransmissionServer.h
src_ros/sap_as_server/launch/: start_server_and_cams.launch
src_ros/sap_as_server/src/: SocketMatTransmissionServer.cpp  core_node.cpp  pic_splice.cpp  read_and_pub.cpp
try_a_camera/: CMakeLists.txt  try_acam.cpp
